replace unmodifiable collections in UnhandledAlertException.java